# sausedemo_automation_framework

./: .gitignore  README.md  project.toml  pyproject.toml  pytest.ini  requirements.txt
.github/: actions.yml
allure_reports/: 0550598d-3e0e-44f2-aa50-0b299a0b2939-result.json  05a27a0b-8226-4d01-9d52-a461b161f98c-result.json  093c9ce4-817a-454e-ae74-101736239ddf-container.json  1e4a053e-c1e4-4a86-a575-7e8a8d41841e-result.json  25b776ec-abae-4b7f-b73a-0d0dafeec4f8-result.json  2a111ae9-6ac2-44f2-a148-197dfe6163ce-result.json  3f5e5e3b-1ceb-4ef6-a837-9b455d6fcdc8-result.json  4a398097-43a1-446b-8c3f-6f7708e266f7-result.json  4fe48e05-1bfe-4cc1-9972-3286f7b89262-result.json  53320e10-279b-4a72-9ff4-3350e6ed22ac-attachment.txt  5be18dd3-ad30-4419-9816-047665ca2c0b-container.json  647ab2a7-277a-4c46-9070-10327a7c978e-result.json  64fb1b64-eb92-49e6-99c5-7cb29b86fbf3-result.json  6633b3df-969b-43bb-bed3-f887af706630-result.json  6cc54fef-72b2-4b97-9406-2ad072c4b6e8-result.json  6d34ae9b-4c63-4854-a355-feb33db519bb-result.json  705cbcfd-07d5-4e9c-b72c-1dbd60d36eb9-result.json  794d02c3-904e-49a8-99b3-ef215aed8e70-result.json  87ba700c-031d-46e5-80e8-5fdb574d9bc2-container.json  8963ddc7-c26b-4817-94fc-f18a3857d53a-result.json  90a3f584-93fd-4999-92ab-8a08267de4a4-result.json  92423c80-ee72-4997-a4c3-34149bb0832e-result.json  93ca9e6a-dd18-4b81-8458-8b4fb87d4cd2-result.json  9654c1d3-1258-46ed-a23e-d5cb72e116cd-result.json  966dd297-6509-45f6-8487-85849b36f7a5-result.json  9a6c1c47-69e7-4460-ba2c-969c2610a2af-result.json  9e8ec3ca-4879-4645-9629-d3a8b43f702b-result.json  (+7 more)
(+16 files in other folders)
